# latte

./: .flake8  .gitignore  .pdm-python  README.md  pyproject.toml
latte/: model.py  train.py
latte/datasets/: openweb.py  tiny_stories.py
